add face detection window

--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 	            	<button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
 	            </div>
 	            <div class="form-group">
-	            	<a href="" class="form-control btn btn-primary p-2">Face Login</a>
+	            	<a href="{% url 'face_login' %}" class="form-control btn btn-primary p-2">Face Login</a>
 	            </div>
 	            <div class="form-group d-md-flex">
 	            	<div class="w-50">
